<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsMenuFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/clear_patients" />

                <Button
                    android:id="@+id/clear_all_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:text="@string/clear_entries" />
                <Button
                    android:id="@+id/clear_all_task"
                    android:text="@string/clear"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:text="@string/add_vaccine" />

                <EditText
                    android:id="@+id/vaccination_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vaccine_name_hint"
                    android:inputType="text"
                    android:textAlignment="center"
                    />

                <CheckBox
                    android:id="@+id/vaccination_component"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:checked="true"
                    android:text="@string/two_component" />
                <Button
                    android:id="@+id/save_new_vaccine"
                    android:text="@string/save_button"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:text="@string/vaccine_list" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/select_vaccines"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    />
                <Button
                    android:id="@+id/clear_all_vaccination"
                    android:text="@string/clear"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>
