<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddNewEntryFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_a_patient"/>

                <Spinner
                    android:id="@+id/patient_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:entries="@array/spinner_test"
                    android:layout_marginTop="8sp"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_vaccine"
                    android:layout_marginTop="16sp"/>

                <Spinner
                    android:id="@+id/vaccination_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:entries="@array/spinner_test"
                    android:layout_marginTop="8sp"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_component"
                    android:layout_marginTop="16sp"/>

                <Spinner
                    android:id="@+id/component_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:entries="@array/spinner_test"
                    android:layout_marginTop="8sp"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_date_and_time_of_vaccine"
                    android:layout_marginTop="16sp"/>

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_date"
                    android:inputType="date"
                    android:textAlignment="center"
                    android:layout_marginTop="8sp"
                    android:autofillHints="@string/hint_date" />

                <EditText
                    android:id="@+id/editTextTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_time"
                    android:inputType="time"
                    android:textAlignment="center"
                    android:layout_marginTop="8sp"
                    android:autofillHints="@string/hint_time"/>

                <Button
                    android:id="@+id/addNewEntry"
                    android:text="@string/save_button"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>
