<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainMenuFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".MainActivity">

                <Button
                    android:id="@+id/newPatient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_patient" />

                <Button
                    android:id="@+id/newEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_entry" />

                <Button
                    android:id="@+id/selectAllEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/look_all_entry" />
                <Button
                    android:id="@+id/selectAllUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/look_all_patients" />

            </LinearLayout>

            <Button
                android:id="@+id/settings_menu"
                app:layout_constraintWidth="wrap_content"
                android:text="@string/settings"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>