<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SelectEntryFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/editTextFilterLastName"
                    android:layout_width="318dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/search_by_last_name"
                    android:inputType="textPersonName" />
            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <EditText
                        android:id="@+id/filter_vaccine_date"
                        android:layout_width="318dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/search_by_date"
                        android:inputType="date" />
                    <Button
                        android:id="@+id/filter_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_text"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/select_entries"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>
